--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@tailwindcss/postcss7-compat": "^2.1.0",
         "autoprefixer": "^10.2.5",
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
         "postcss": "^8.2.9",
         "react": "^16.2.0",
@@ -25,6 +25,7 @@
         "tailwindcss": "^2.1.1"
     },
     "dependencies": {
-        "react-content-loader": "^6.0.3"
+        "react-content-loader": "^6.0.3",
+        "use-sound": "^4.0.1"
     }
 }
